# cognivault

./: .env.dev  .gitignore  CONTRIBUTING.md  Dockerfile  LANDSCAPE.md  Makefile  README.md  RESEARCH.md  alembic.ini  bootstrap.sh  cognivault  docker-compose.dev.yml  init.sql  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
.github/: labels.yml
examples/workflows/: enhanced_prompts_example.yaml
migrations/: env.py
migrations/versions/: d23cfa5ca74f_initial_database_schema_with_pgvector_.py
scripts/: setup-hooks.sh  setup.sh
scripts/agents/critic/: test_critic_batch.py
scripts/agents/refiner/: test_batch.py  test_refiner_batch.py
scripts/demos/: demo_langraph_interface.py  demo_observability.py  demo_orchestration_interface.py
scripts/hooks/: pre-commit  pre-push
scripts/manual_tests/: test_historian_safeguard_demo.py
src/cognivault/: cli.py  context.py  correlation.py  orchestrator.py
src/cognivault/agents/: base_agent.py  models.py  (+6 more)
tests/: conftest.py  test_api_protection.py  test_cli.py  test_context.py  test_context_enhanced.py  test_orchestrator.py
tests/agents/: test_base_agent.py  test_critic.py  test_historian.py  test_refiner.py  test_synthesis.py
tests/ci_cd/: test_openai_parameter_regression_prevention.py
tests/cli/: test_cli_langgraph_integration.py  test_cli_langgraph_real.py
tests/config/: test_app_config.py  test_openai_config.py
tests/contracts/: __init__.py  conftest.py  test_external_api_contracts.py  test_orchestration_api_contract.py
tests/dependencies/: __init__.py  test_advanced_orchestrator.py  test_dynamic_composition.py  test_execution_planner.py  test_failure_manager.py  test_graph_engine.py  test_resource_scheduler.py
tests/diagnostics/: test_cli.py  test_dag_explorer.py  test_dag_explorer_minimal.py  test_diagnostics.py  test_execution_tracer.py  test_formatters.py  test_health.py  test_pattern_tester.py  test_pattern_validator.py  test_profiler.py  test_visualize_dag.py
tests/exceptions/: __init__.py  test_base_exceptions.py  test_config_errors.py  test_io_errors.py  test_llm_errors.py
tests/factories/: __init__.py  advanced_orchestrator_factories.py  agent_config_factories.py  agent_context_factories.py  agent_output_factories.py  api_model_factories.py  diagnostic_health_factories.py  event_factory.py  mock_llm_factories.py  openai_error_factories.py  orchestration_factories.py  resource_scheduler_factories.py  routing_factories.py  state_container_factories.py
tests/fakes/: __init__.py  base_mock.py  mock_orchestration.py
tests/infrastructure/: test_database_manager.py
tests/integration/: __init__.py  conftest.py  test_agent_config_workflow_integration.py  test_agent_config_workflow_integration.yaml  test_api_protection.py  test_api_workflow_persistence.py  test_cli.py  test_cli_to_api_flow.py  test_complete_structured_output_pipeline.py  test_database_connections.py  test_database_integration.py  test_database_session_transactions.py  test_event_system_integration.py  test_fastapi_integration.py  test_historian_hybrid_search.py  test_historian_relevance_filter_safeguard.py  test_markdown_database_persistence.py  test_metadata_flow.py  test_node_fallbacks.py  test_node_interoperability.py  test_phase3_architecture_validation.py  test_pydantic_ai_database_integration.py  test_timeout_cascade_prevention.py  test_websocket_event_integration.py
tests/langgraph_backend/: test_build_graph.py  test_conditional_patterns.py  test_graph_cache.py  test_graph_patterns.py  test_integration.py  test_semantic_validation.py  test_semantic_validation_integration.py
tests/langraph/: test_adapter.py  test_checkpointing_integration.py  test_error_policies.py  test_graph_builder.py  test_historian_integration.py  test_historian_node_detailed.py  test_langgraph_install.py  test_memory_manager.py  test_node_wrappers.py  test_orchestrator.py  test_prototype_dag.py  test_real_orchestrator.py  test_routing.py  test_state_bridge.py  test_state_schemas.py
tests/llm/: test_factory.py  test_openai.py  test_stub.py
tests/observability/: __init__.py  test_formatters.py  test_logger.py
tests/orchestration/: test_adapter.py  test_historian_integration.py  test_historian_node_detailed.py  test_node_wrappers.py  test_orchestrator.py  test_state_bridge.py
tests/performance/: README.md  performance_regression_framework.py  test_openai_parameter_performance.py  test_resource_bottleneck_detection.py  test_systemic_performance_regression.py  test_timeout_latency_isolation.py
tests/routing/: test_enhanced_routing_integration.py
tests/store/: test_frontmatter.py  test_topic_manager.py  test_utils.py  test_wiki_adapter.py
tests/unit/: test_cli_coverage.py  test_context.py  test_context_coverage.py  test_context_enhanced.py  test_context_pydantic_migration.py
tests/utils/: README.md  __init__.py  async_test_helpers.py  critic_factories.py  historian_factories.py  langchain_factories.py  refiner_factories.py  test_database_config.py  test_versioning.py
tests/workflows/: test_fanout_fanin_state_passing.py  test_json_serialization.py
tools/: test_websocket_events.html
(+376 files in other folders)
